day16 modification made on the title

--- a/day16/index.html
+++ b/day16/index.html
@@ -23,7 +23,7 @@
         <!--Top Container-->
         <section class="top-container">
             <header class="showcase">
-                <h1>Your Web presence</h1>
+                <h1>The Grind Continues</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eligendi expedita ipsam, tempore aliquid quisquam.</p>
                 <a href="#" class="btn">Read More</a>
             </header>
@@ -68,7 +68,7 @@
         <section class="info">
             <img src="img/pic1.jpg" alt="">
             <section>
-                <h2>Your Business on the web</h2>
+                <h2>CodeTrain monthly project idea</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum asperiores eius magni iste vel praesentium molestias nulla, nisi quas accusamus, a maxime voluptatem! Quasi quaerat error iste voluptatem consectetur sequi?</p>
                 <a href="#" class="btn">Learn More</a>
             </section>
