day16 modifying the footer

--- a/day16/index.html
+++ b/day16/index.html
@@ -90,7 +90,7 @@
 
         <!--footer -->
         <footer>
-            <p>GridBiz &copy; By Alex Nolla | The Grind continues #thankU4Ex16 2022</p>
+            <p>#thankU4Ex16 &copy; By Alex Nolla | The Grind continues 2022</p>
         </footer>
         
 
