--- a/day6/healthy.html
+++ b/day6/healthy.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <img src="https://content.codecademy.com/courses/freelance-1/unit-2/salad.jpg" alt="Kale Caeasar Salad"/>
+  <img src="https://thumbs.dreamstime.com/z/ine-art-healthy-cooking-logo-organic-food-symbols-your-salad-bar-vegan-menu-line-art-healthy-cooking-logo-organic-110811691.jpg" alt="Kale Caeasar Salad"/>
   <h1>Kale Caesar Quinoa Salad with Roasted Chicken</h1>
   <p class="description">Kale and quinoa provide a healthy base for roasted chicken topped with a light Caesar sauce.</p>
 
